@@ -1,9 +1,21 @@
 Package: hexSticker
 Title: Create Hexagon Sticker in R
 Version: 0.0.2
-Authors@R: person("Guangchuang", "Yu", email = "guangchuangyu@gmail.com", role = c("aut", "cre"))
-Description: Helper function for creating reproducible hexagon sticker purely in R.
-Depends: R (>= 3.3.0)
+Authors@R: c(person(given = "Guangchuang", family = "Yu",
+	   	    email = "guangchuangyu@gmail.com",
+		    role = c("aut", "cre")),
+	     person(given = "Laurent",
+	            family = "Gatto",
+	            email = "lg390@cam.ac.uk",
+		    role = "ctb"),
+	     person(given = "Johannes", family = "Rainer",
+	       	    email = "johannes.rainer@eurac.edu",
+		    role = "ctb")
+		    )
+Description: Helper function for creating reproducible hexagon sticker purely in
+    R.
+Depends:
+    R (>= 3.3.0)
 Imports:
     ggforce,
     ggplot2,
@@ -17,4 +29,4 @@ URL: https://github.com/GuangchuangYu/hexSticker
 BugReports: https://github.com/GuangchuangYu/hexSticker/issues
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 5.0.1
