@@ -1,5 +1,7 @@
 CHANGES IN VERSION 0.0.2
 ------------------------
+ o support select font typeface <2017-03-15, Wed>
+   + https://github.com/GuangchuangYu/hexSticker/issues/4
  o move package name to top layer <2017-03-14, Tue>
    + https://github.com/GuangchuangYu/hexSticker/issues/3
 
